# civic-data-boundaries-us-mn-precincts

./: .gitignore  CHANGELOG.md  DEVELOPER.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
data-config/: us_mn_precincts.yaml
data-out/: index.json  manifest.json
data-out/states/minnesota/: index.json
data-out/states/minnesota/cd08/: mn-cd8-precincts.json
data-out/states/minnesota/precincts/2025-04/: metadata.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/search/: search_index.json
scripts/: simplify_map.sh
src/civic_data_boundaries_us_mn_precincts/: __main__.py  build_layer.py  index.py  validate.py
src/civic_data_boundaries_us_mn_precincts/cli/: cli.py
src/civic_data_boundaries_us_mn_precincts/utils/: config_utils.py  get_paths.py
tests/: test_cli_cli.py
